# sentry-offline-transport

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/sentry_offline/: __init__.py  storage.py  transport.py
tests/: conftest.py  test_api.py  test_fs_storage.py  test_transport.py
